[package]
name = "superpoint_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-einops = "0.1.1"
#candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
candle-ext = { version = "0.1.7", features = ["cuda"] }
#candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
hf-hub = "0.3.2"
image = "0.25.1"
arrayfire = "3.8.0"
